just added the comment

--- a/project1.html
+++ b/project1.html
@@ -35,7 +35,7 @@
 <body>
     <div class="anu" >
         <p>Login</p>
-
+// I'm adding the comment
         <input type="text" class="abc" placeholder="Enter ur email id"> <br><br>
         <input type="password"  class="xyz" placeholder="Enter the password here"> <br><br>
         <button>Submit</button>
